# pms-database

./: .gitignore  auto-build.notes.sh
email_worker/: .env.template  Cargo.toml
email_worker/src/: main.rs
setup/: README.md  drop-cascade.sql  function-identifier-extractor.awk  selective_update.sh
setup/functions/: base64url_jsonb.sql  create_jwt.sql  data_merge.sql  fields_get.sql  has_role.sql  jsonb_base64url.sql  jsonb_error.sql  login.sql  parse_jwt.sql  people_add.sql  people_del.sql  people_get.sql  people_history.sql  people_roles_add.sql  people_roles_get.sql  people_set.sql  permissions_get.sql  remove_base.sql  remove_fields.sql  roles_add.sql  roles_get.sql  roles_permissions_get.sql  roles_permissions_set.sql-partial  roles_set.sql  to_date.sql
setup/indices/: general.sql
setup/sequences/: gid.sql
setup/tables/: fields.sql  jobs.sql  people.sql  people_roles.sql  permissions.sql  roles.sql  roles_permissions.sql
setup/triggers/: insert_notify.sql  update_modified_timestamp.sql
setup/types/: jobs_state.sql  payload_permissions.sql  permissions_type.sql
