[package]
name = "email_worker"
version = "0.0.2"
authors = ["Benjamin W. Broersma <bw@broersma.com>"]
publish = false

[dependencies]

chan = "0.1.19"
chan-signal = "0.2.0"
dotenv = "0.8.0"
fallible-iterator = "0.1.3"
lettre = "0.6.2"
mustache = "0.8.0"
postgres = { version = "0.14.0", features = ["with-serde_json"]}
postgres_macros = "0.1.13"
serde = "0.9.8"
serde_derive = "0.9.8"
serde_json = "0.9.8"